# libnat20

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/license-check/: header-apache2-slash-star.txt  license-config.json
.github/workflows/: build-and-deploy-docs.yml  check-license-headers.yml  clang-format-lint.yml  cmake-build-and-test.yml  ensure-sha-pinned-actions.yml
docs/: annotated.html  asn1_8h.html  asn1_8h__dep__incl.map  asn1_8h__dep__incl.md5  asn1_8h__incl.map  asn1_8h__incl.md5  asn1_8h_source.html  classes.html  dir_c352e5e5b8d6edb6c227a6d1a54acccd.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  group__n20__asn1__classes.html  group__n20__asn1__universal__tags.html  index.html  modules.html  structn20__asn1__object__identifier-members.html  structn20__asn1__object__identifier.html  structn20__asn1__stream-members.html  structn20__asn1__stream.html  structn20__x509-members.html  structn20__x509.html  structn20__x509__algorithm__identifier-members.html  structn20__x509__algorithm__identifier.html  structn20__x509__algorithm__identifier__coll__graph.map  structn20__x509__algorithm__identifier__coll__graph.md5  structn20__x509__coll__graph.map  structn20__x509__coll__graph.md5  structn20__x509__ext__basic__constraints-members.html  structn20__x509__ext__basic__constraints.html  structn20__x509__ext__key__usage-members.html  structn20__x509__ext__key__usage.html  structn20__x509__extension-members.html  structn20__x509__extension.html  structn20__x509__extension__coll__graph.map  (+24 more)
docs/search/: all_0.js  all_1.js  all_2.js  classes_0.js  files_0.js  functions_0.js  groups_0.js  searchdata.js  variables_0.js  variables_1.js
include/nat20/: asn1.h  cbor.h  crypto.h  error.h  functionality.h  oid.h  open_dice.h  sha.h  stream.h  types.h  x509.h  x509_ext_open_dice_input.h  x509_ext_tcg_dice_tcb_freshness.h  x509_ext_tcg_dice_tcb_info.h  x509_ext_tcg_dice_ueid.h
include/nat20/crypto/nat20/: crypto.h  sha.h
include/nat20/crypto_bssl/: crypto.h
include/nat20/service/: gnostic.h  messages.h
include/nat20/testing/: test_utils.h  test_vector_reader.h
src/: asn1.c  oid.c  x509.c  x509_ext_open_dice_input.c
src/core/: asn1.c  cbor.c  functionality.c  oid.c  sha256.c  sha512.c  stream.c  x509.c  x509_ext_open_dice_input.c  x509_ext_tcg_dice_tcb_freshness.c  x509_ext_tcg_dice_tcb_info.c  x509_ext_tcg_dice_ueid.c
src/core/test/: asn1.cpp  cbor.cpp  functionality.cpp  oid.cpp  sha.cpp  sha224_test_vectors.hpp  sha256_test_vectors.h  sha256_test_vectors.hpp  stream.cpp  test_vectors.cpp  x509.cpp  x509_ext_open_dice_input.cpp  x509_ext_tcg_dice_tcb_freshness.cpp  x509_ext_tcg_dice_tcb_info.cpp  x509_ext_tcg_dice_ueid.cpp
src/core/test/test_data/: opendice_attestation_test_vectors.txt
src/crypto/: crypto_boringssl.cpp
src/crypto/nat20/: crypto.c  sha256.c  sha512.c
src/crypto/test/: crypto.cpp  crypto_boringssl.cpp  crypto_boringssl.h  crypto_implementations_to_test.h  crypto_nat20.cpp  crypto_nat20.h  test.cpp  test_vector_reader.cpp  test_vector_reader.h  test_vectors.cpp  test_vectors.h
src/crypto/test/test_data/: hkdf_test_vectors.txt  hmac_test_vectors.txt
src/service/: client_stateless.c  gnostic.c  gnostic_main.c  messages.c  proxy.c
src/testing/: test_utils.cpp
test/: asn1.cpp  test.cpp  x509.cpp  x509_ext_open_dice_input.cpp
